infra/net-aux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: net-aux
  name: net-aux
  namespace: net-aux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: net-aux
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: net-aux
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 127.0.0.1
      containers:
        - name: unbound
          image: mvance/unbound:1.17.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: unbound-dns-tcp
              containerPort: 5335
              protocol: TCP
            - name: unbound-dns-udp
              containerPort: 5335
              protocol: UDP
          startupProbe:
            exec:
              command:
                - 'drill'
                - '@127.0.0.1'
                - '-p'
                - '5335'
                - 'cnn.com'
            initialDelaySeconds: 60
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
             - name: unbound-config
               mountPath: /opt/unbound/etc/unbound/unbound.conf
               subPath: unbound.conf
        - name: pi-hole
          image: pihole/pihole:2023.05.2
          imagePullPolicy: Always
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dchp
              containerPort: 67
              protocol: UDP
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          resources:
            requests:
              cpu: "20m"
              memory: "512Mi"
            limits:
              cpu: "250m"
              memory: "896Mi"
          livenessProbe:
            httpGet:
              path: /admin/index.php
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            failureThreshold: 10
            timeoutSeconds: 5
          startupProbe:
            exec:
              command:
                - 'dig'
                - '@127.0.0.1'
                - 'github.com'
            initialDelaySeconds: 60
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: pi-hole-config
              mountPath: /etc/pihole
            - name: custom-dnsmasq
              mountPath: /etc/dnsmasq.d/02-custom.conf
              subPath: 02-custom.conf
            - name: ad-lists
              mountPath: /etc/pihole/adlists.list
              subPath: adlists.list
            - name: regex
              mountPath: /etc/pihole/regex.list
              subPath: regex.list
            - name: whitelist
              mountPath: /etc/pihole/whitelist.txt
              subPath: whitelist.txt
        - name: cloudflared
          image: cloudflare/cloudflared:2023.7.3
          imagePullPolicy: IfNotPresent
          args:
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            initialDelaySeconds: 60
            failureThreshold: 5
            periodSeconds: 10
          volumeMounts:
            - name: cloudflared-config
              mountPath: /etc/cloudflared/config/config.yaml
              subPath: config.yaml
            - name: tunnel-credentials
              mountPath: /etc/cloudflared/creds
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: unbound-config
          configMap:
            name: unbound-config
        - name: pi-hole-config
          persistentVolumeClaim:
            claimName: pi-hole-config
        - name: custom-dnsmasq
          configMap:
            name: custom-dnsmasq
        - name: ad-lists
          configMap:
            name: adlists.list
        - name: regex
          configMap:
            name: regex.list
        - name: whitelist
          configMap:
            name: whitelist.txt
        - name: cloudflared-config
          configMap:
            name: cloudflared-config
        - name: tunnel-credentials
          secret:
            secretName: tunnel-credentials
