infra/net-aux/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: net-aux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`net-aux.stonegarden.dev`)
      kind: Rule
      services:
        - name: net-aux
          port: http
      middlewares:
        - name: traefik-forward-auth
